--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,5 +1,5 @@
 {
-  "Stock Market App" : "Stock Market App",
+  "Stock Market App" : "Gold Market - السوق الذهبي",
   "Home": "Home",
   "Currency": "Currency",
   "Gold": "Gold",
