--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,5 +1,5 @@
 {
-  "Stock Market App" : "تطبيق البورصة",
+  "Stock Market App" : "Gold Market - السوق الذهبي",
   "Home": "الرئيسية",
   "Currency": "العملات",
   "Gold": "الذهب",
