--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -47,6 +47,7 @@
   "Name" : "الاسم",
   "Phone" : "الهاتف",
   "Phone Number" : "رقم الهاتف",
-  "Save" : "حفظ"
+  "Save" : "حفظ",
+  "USD" : "الدولار الأمريكي {}"
 
 }
