--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -34,5 +34,7 @@
   "Bitcoin": "Bitcoin",
   "Ethereum": "Ethereum",
   "EGP" : "{} EGP",
-  "CHF" : "CHF"
+  "CHF" : "CHF",
+  "USD" : "USD {}"
+
 }
